--- a/webpack-project/index.html
+++ b/webpack-project/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="app">
+        {{ message }}
+    </div>
     <script src="./dist/index.js"></script>
-    <script src="./dist/search.js"></script>
-    <!-- <script src="./dist/bundle.js"></script> -->
 </body>
 </html>
